Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,18 +4,19 @@
 [access "refs/*"]
 	owner = group user/Jungho Ahn (jhahn21)
 [access "refs/for/refs/*"]
-	label-Code-Review = -2..+2 group user/Jungho Ahn (jhahn21)
-	label-Verified = -1..+1 group user/Jungho Ahn (jhahn21)
-	push = group user/Jungho Ahn (jhahn21)
-	read = group user/Jungho Ahn (jhahn21)
-	rebase = group user/Jungho Ahn (jhahn21)
-	removeReviewer = group user/Jungho Ahn (jhahn21)
-	submit = group user/Jungho Ahn (jhahn21)
+	label-Code-Review = -2..+2 group Project Owners
+	label-Verified = -1..+1 group Project Owners
+	push = group Project Owners
+	push = group Registered Users
+	read = group Project Owners
+	read = group Registered Users
+	rebase = group Project Owners
+	removeReviewer = group Project Owners
+	submit = group Project Owners
 [access "refs/heads/*"]
-	create = group user/Jungho Ahn (jhahn21)
-	push = +force group user/Jungho Ahn (jhahn21)
-	pushMerge = group user/Jungho Ahn (jhahn21)
-	read = group user/Jungho Ahn (jhahn21)
+	create = group Project Owners
+	push = group Project Owners
+	pushMerge = group Project Owners
+	read = group Registered Users
 [access "refs/tags/*"]
-	push = group user/Jungho Ahn (jhahn21)
-	push = +force group user/Jungho Ahn (jhahn21)
+	push = group Project Owners
