--- a/project.config
+++ b/project.config
@@ -13,6 +13,7 @@
 	rebase = group Project Owners
 	removeReviewer = group Project Owners
 	submit = group Project Owners
+	deleteOwnChanges = group Registered Users
 [access "refs/heads/*"]
 	create = group Project Owners
 	push = group Project Owners
