Modify access rules

--- a/project.config
+++ b/project.config
@@ -19,5 +19,6 @@
 	pushMerge = group Project Owners
 	read = group Registered Users
 	deleteOwnChanges = group Registered Users
+	deleteChanges = group Project Owners
 [access "refs/tags/*"]
 	push = group Project Owners
