--- a/project.config
+++ b/project.config
@@ -13,13 +13,12 @@
 	rebase = group Project Owners
 	removeReviewer = group Project Owners
 	submit = group Project Owners
-	deleteChanges = group Project Owners
+	deleteOwnChanges = group Registered Users
 [access "refs/heads/*"]
 	create = group Project Owners
 	push = group Project Owners
 	pushMerge = group Project Owners
 	read = group Registered Users
 	deleteOwnChanges = group Registered Users
-	deleteChanges = group Project Owners
 [access "refs/tags/*"]
 	push = group Project Owners
